--- a/css/styles.css
+++ b/css/styles.css
@@ -145,11 +145,10 @@ header > .header-container {
 }
 
 .hero {
-  background-color: var(--second-bg-color);
   text-align: center;
-  height: 600px;
   align-items: center;
   padding: 200px 0;
+  margin: 0 auto;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -157,6 +156,7 @@ header > .header-container {
     ),
     url(../images/team.jpg);
 
+  max-width: 1600px;
   background-color: #c4c4c4;
   background-repeat: no-repeat;
   background-position: center;
@@ -308,16 +308,16 @@ header > .header-container {
   height: 44px;
   border-radius: 50%;
   gap: 10px;
-  fill: #afb1b8;
+  color: #afb1b8;
 }
 
 .team-contacts-link:hover,
 .team-contacts-link:focus {
   background-color: var(--hover-color);
+  color: var(--second-text-color);
 }
-.team-contacts-link:hover .team-contacts-icon,
-.team-contacts-link:focus .team-contacts-icon {
-  fill: var(--second-text-color);
+.team-contacts-icon {
+  fill: currentColor;
 }
 
 .team-list {
@@ -347,7 +347,7 @@ header > .header-container {
   letter-spacing: 0.03em;
 }
 .team-text {
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -410,7 +410,6 @@ header > .header-container {
 }
 .first-footer {
   display: flex;
-  align-items: center;
   align-items: baseline;
 }
 
@@ -527,22 +526,6 @@ header > .header-container {
 .projects {
   background-color: var(--project-bg-color);
 }
-.portfolio-button:active {
-  background-color: var(--hover-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  border-color: transparent;
-  font-family: inherit;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  color: var(--second-text-color);
-}
 .portfolio-button {
   background-color: var(--third-bg-color);
   border-radius: 4px;
@@ -571,13 +554,15 @@ header > .header-container {
 .portfolio-button:focus {
   background-color: var(--hover-color);
   color: var(--second-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects-item {
   background-color: var(--main-bg-color);
   flex-basis: calc((100% - 60px) / 3);
 }
-.projects-link{
+.projects-link {
   display: block;
 }
 .projects-link:hover,
